Added Non-Blocking CSS Font Loading

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <title>Front-end Web Developer for Oklahoma City | CodyeWatson.com</title>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-  <link href="css/styles.min.css" rel="stylesheet">
+  <link href="css/styles.min.css" rel="stylesheet" media="none" onload="this.media='all';">
 </head>
   <body>
     <header>
