--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <title>Front-end Web Developer for Oklahoma City | CodyeWatson.com</title>
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" media="none" onload="this.media='all';">
   <link href="css/styles.min.css" rel="stylesheet" media="none" onload="this.media='all';">
 </head>
   <body>
