--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
   <link href="css/styles.min.css" rel="stylesheet">
 </head>
   <body>
+    
     <header>
-      <nav>
-
+      <nav class="card">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
       </nav>
     </header>
 
@@ -31,13 +38,9 @@
       </article>
     </section>
 
-    <aside>
+    <aside></aside>
 
-    </aside>
-
-    <footer>
-
-    </footer>
+    <footer></footer>
 
   <script src="js/scripts.min.js"></script>
 </body>
