--- a/index.html
+++ b/index.html
@@ -13,34 +13,46 @@
   <body>
     
     <header>
-      <nav class="card">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+      <nav class="nav card">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
       </nav>
     </header>
 
-    <section>
+    <main class="grid">
       <article>
         <header>
           <h1>Hello World</h1>
+          <p>weeeeeeeeeeeeeee</p>
+          <p>weeeeeeeeeeeeeee</p>
         </header>
       </article>
 
       <article>
         <header>
-
+          <h1>Hello World</h1>
+          <p>weeeeeeeeeeeeeee</p>
         </header>
       </article>
-    </section>
 
-    <aside></aside>
+      <article>
+        <header>
+          <h1>Hello World</h1>
+          <p>weeeeeeeeeeeeeee</p>
+        </header>
+      </article>
+    </main>
 
-    <footer></footer>
+    <aside>
+
+    </aside>
+
+    <footer>
+
+    </footer>
 
   <script src="js/scripts.min.js"></script>
 </body>
