--- a/index.html
+++ b/index.html
@@ -1,59 +1,6 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <title>Front-end Web Developer in Oklahoma City | CodyeWatson.com</title>
-  <link href="css/styles.min.css" rel="stylesheet">
-</head>
-  <body>
-    
-    <header>
-      <nav class="nav card">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Portfolio</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
-      </nav>
-    </header>
-
-    <main class="grid">
-      <article>
-        <header>
-          <h1>Hello World</h1>
-          <p>weeeeeeeeeeeeeee</p>
-          <p>weeeeeeeeeeeeeee</p>
-        </header>
-      </article>
-
-      <article>
-        <header>
-          <h1>Hello World</h1>
-          <p>weeeeeeeeeeeeeee</p>
-        </header>
-      </article>
-
-      <article>
-        <header>
-          <h1>Hello World</h1>
-          <p>weeeeeeeeeeeeeee</p>
-        </header>
-      </article>
-    </main>
-
-    <aside>
-
-    </aside>
-
-    <footer>
-
-    </footer>
-
-  <script src="js/scripts.min.js"></script>
-</body>
-</html>
+<!DOCTYPE HTML><html><head><title>Front-end Web Developer in Oklahoma City | CodyeWatson.com</title><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta name="description" content=""><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="apple-touch-icon" href="apple-touch-icon.png"><link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet" type="text/css" media="none" onload="this.media='all';"><link href="css/styles.min.css" rel="stylesheet"></head><body><!--<nav>
+    <a href="#">Blah</a>
+    <a href="#">Blah</a>
+    <a href="#">Blah</a>
+    <a href="#">Blah</a>
+  </nav>--><header class="l-header"><h1>Hello. I'm Codye Watson. I'm a front-end web developer.</h1></header><main class="main grid"><article><header><h1>Hello World</h1><p>weeeeeeeeeeeeeee</p><p>weeeeeeeeeeeeeee</p></header></article><article><header><h1>Hello World</h1><p>weeeeeeeeeeeeeee</p></header></article><article><header><h1>Hello World</h1><p>weeeeeeeeeeeeeee</p></header></article></main><aside></aside><footer></footer><script src="js/scripts.min.js"></script></body></html>
