--- a/index.html
+++ b/index.html
@@ -107,24 +107,24 @@
         <h2 class="section-title">What I've Worked On</h2>
         <div class="projects-grid">
             <div class="project-card">
-                <div class="project-image">Project Image 1</div>
+                <div class="project-image">TBD</div>
                 <div class="project-content">
-                    <h3>E-commerce Platform</h3>
-                    <p>A fully responsive e-commerce solution built with React and Node.js</p>
+                    <h3>TBD</h3>
+                    <p>To be determined</p>
                 </div>
             </div>
             <div class="project-card">
-                <div class="project-image">Project Image 2</div>
+                <div class="project-image">TBD</div>
                 <div class="project-content">
-                    <h3>Task Management App</h3>
-                    <p>A collaborative task manager with real-time updates</p>
+                    <h3>TBD</h3>
+                    <p>To be determined</p>
                 </div>
             </div>
             <div class="project-card">
-                <div class="project-image">Project Image 3</div>
+                <div class="project-image">TBD</div>
                 <div class="project-content">
-                    <h3>Weather Dashboard</h3>
-                    <p>A beautiful weather app with detailed forecasts</p>
+                    <h3>TBD</h3>
+                    <p>To be determined</p>
                 </div>
             </div>
         </div>
