SITE: Touched up logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">CW</div>
+            <div class="logo">&lt;Codye Watson&gt;</div>
             <div class="nav-links">
                 <a href="#home">Home</a>
                 <a href="#experience">Experience</a>
