--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codye Watson - Portfolio</title>
-    <link rel="stylesheet" href="assets//css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css" media="print" onload="this.media='all'">
 </head>
 <body>
     <header>
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <div class="education-image"><img src="assets/images/scrum-master-cert.png" width="100%" height="100%" alt="Project 1"></div>
+                <div class="education-image"><img src="assets/images/scrum-master-cert.png" loading="lazy" width="100%" height="100%" alt="Project 1"></div>
                 <div class="project-content">
                     <p><img src="https://media.licdn.com/dms/image/v2/D560BAQFdepbfdMhg3g/company-logo_100_100/company-logo_100_100/0/1719256430021/scrum_alliance_logo?e=1747872000&amp;v=beta&amp;t=deYEU7DPq5DuYZ4KRmsHSsZOQxAb1EW3UqTVjYj-hZs" loading="lazy" height="48" width="48" alt="Scrum Alliance Logo"></p>
                     <p>Scrum Alliance</p>
@@ -223,6 +223,6 @@
         <p>&copy; 2025 Codye Watson. All rights reserved.</p>
     </footer>
     
-    <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/scripts.js" defer></script>
 </body>
 </html>
