--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </div>
             </div>
             
-            <form class="contact-form" onSubmit="handleSubmit(event)">
+            <form class="contact-form" method="POST" action="mailto:graphettion@gmail.com" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input 
