SITE: Made the project image area clickable

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <h2 class="section-title">What I've Worked On</h2>
         <div class="projects-grid">
             <div class="project-card">
-                <div class="project-image"><a href="projects/todoapp/index.html" target="_blank"><img src="assets/images/project-todoapp.png" alt="Todo App"  loading="lazy" height="128" width="128"></a></div>
+                <a href="projects/todoapp/index.html" target="_blank"><div class="project-image"><img src="assets/images/project-todoapp.png" alt="Todo App"  loading="lazy" height="128" width="128"></div></a>
                 <div class="project-content">
                     <h3>To Do App</h3>
                     <p>Created a todo app using web components.</p>
