SITE: Added chatapp to projects

--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                 </div>
             </div>
             <div class="project-card">
-                <div class="project-image">TBD</div>
+                <a href="projects/chatapp/index.html" target="_blank"><div class="project-image"><img src="assets/images/project-chatapp.png" alt="Chat App"  loading="lazy" height="128" width="128"></div></a>
                 <div class="project-content">
-                    <h3>TBD</h3>
-                    <p>To be determined</p>
+                    <h3>Chat App</h3>
+                    <p>Developed a Chat App using web components.</p>
                 </div>
             </div>
             <div class="project-card">
