--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">&lt;Codye Watson&gt;</div>
+            <div class="logo"><a href="#"&lt;Codye Watson&gt;</a></div>
             <div class="nav-links">
                 <a href="#home">Home</a>
                 <a href="#experience">Experience</a>
@@ -93,7 +93,7 @@
                 <div class="project-content">
                     <p><img src="https://media.licdn.com/dms/image/v2/D560BAQFdepbfdMhg3g/company-logo_100_100/company-logo_100_100/0/1719256430021/scrum_alliance_logo?e=1747872000&amp;v=beta&amp;t=deYEU7DPq5DuYZ4KRmsHSsZOQxAb1EW3UqTVjYj-hZs" loading="lazy" height="48" width="48" alt="Scrum Alliance Logo"></p>
                     <p>Scrum Alliance</p>
-                    <p><em>August 2005 - December 2009</em></p>
+                    <p><em>January 2011 - January 2013</em></p>
                     <h3>Certified Scrum Master</h3>
                     <p>Agile-focused Certified Scrum Master with expertise in facilitating Scrum ceremonies, empowering self-organizing teams, and driving continuous improvement. Proven ability to remove impediments, optimize workflows, and deliver high-value results on time. Skilled in fostering collaboration, enhancing team productivity, and promoting Agile principles to achieve project success.</p>
                     <br>
