SITE: Added education degree and video player project

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h2 class="section-title">What I've Learned</h2>
         <div class="projects-grid">
             <div class="project-card">
-                <div class="education-image"></div>
+                <div class="education-image"><img src="assets/images/education-degree.png" loading="lazy" width="100%" height="100%" alt="Bachelor of Science in Multimedia Instructional Design"></div>
                 <div class="project-content">
                     <p><img src="https://media.licdn.com/dms/image/v2/C560BAQFT_l9N_fpiNQ/company-logo_100_100/company-logo_100_100/0/1630609102194/cameron_university_logo?e=1747872000&amp;v=beta&amp;t=0AoVWjZvnk5nz7EdfZf6fovM-gju2LqrQYDiO9TPx2g" loading="lazy" height="48" width="48" alt="Cameron University logo"></p>
                     <p>Cameron University</p>
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <div class="education-image"><img src="assets/images/scrum-master-cert.png" loading="lazy" width="100%" height="100%" alt="Project 1"></div>
+                <div class="education-image"><img src="assets/images/education-cert-scrummaster.png" loading="lazy" width="100%" height="100%" alt="Certified Scrum Master Certificate"></div>
                 <div class="project-content">
                     <p><img src="https://media.licdn.com/dms/image/v2/D560BAQFdepbfdMhg3g/company-logo_100_100/company-logo_100_100/0/1719256430021/scrum_alliance_logo?e=1747872000&amp;v=beta&amp;t=deYEU7DPq5DuYZ4KRmsHSsZOQxAb1EW3UqTVjYj-hZs" loading="lazy" height="48" width="48" alt="Scrum Alliance Logo"></p>
                     <p>Scrum Alliance</p>
@@ -107,24 +107,24 @@
         <h2 class="section-title">What I've Worked On</h2>
         <div class="projects-grid">
             <div class="project-card">
-                <a href="projects/todoapp/index.html" target="_blank"><div class="project-image"><img src="assets/images/project-todoapp.png" alt="Todo App"  loading="lazy" height="128" width="128"></div></a>
+                <a href="projects/todoapp/index.html" target="_blank"><div class="project-image"><img src="assets/images/project-todoapp.png" alt="Todo App Project"  loading="lazy" height="128" width="128"></div></a>
                 <div class="project-content">
-                    <h3>To Do App</h3>
+                    <h3>Todo App</h3>
                     <p>Created a todo app using web components.</p>
                 </div>
             </div>
             <div class="project-card">
-                <a href="projects/chatapp/index.html" target="_blank"><div class="project-image"><img src="assets/images/project-chatapp.png" alt="Chat App"  loading="lazy" height="128" width="128"></div></a>
+                <a href="projects/chatapp/index.html" target="_blank"><div class="project-image"><img src="assets/images/project-chatapp.png" alt="Chat App Project"  loading="lazy" height="128" width="128"></div></a>
                 <div class="project-content">
                     <h3>Chat App</h3>
                     <p>Developed a Chat App using web components.</p>
                 </div>
             </div>
             <div class="project-card">
-                <div class="project-image">TBD</div>
+                <a href="projects/videoplayer/index.html" target="_blank"><div class="project-image"><img src="assets/images/project-videoplayer.png" alt="Video Player Project"  loading="lazy" height="128" width="128"></div></a>
                 <div class="project-content">
-                    <h3>TBD</h3>
-                    <p>To be determined</p>
+                    <h3>Video Player</h3>
+                    <p>A simple video player created using web components.</p>
                 </div>
             </div>
         </div>
