SITE: Updated company logo images with links to their respective sites

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="timeline-content">
                     <div class="timeline-date">DECEMBER 2022 - FEBRURARY 2025</div>
                     <div class="timeline-role">Software Developer III</div>
-                    <div class="timeline-company-logo"><img src="https://media.licdn.com/dms/image/v2/C4E0BAQF_ZY8B4lCDmA/company-logo_100_100/company-logo_100_100/0/1630619242204/paycom_logo?e=1747872000&amp;v=beta&amp;t=ZXS82gBbXq-45-aCwmi1cKY7DcTWUwFt36c9wsJI-nQ" loading="lazy" height="48" width="48" alt="Paycom logo"></div>
+                    <div class="timeline-company-logo"><a href="https://www.paycom.com/" target="_blank"><img src="https://media.licdn.com/dms/image/v2/C4E0BAQF_ZY8B4lCDmA/company-logo_100_100/company-logo_100_100/0/1630619242204/paycom_logo?e=1747872000&amp;v=beta&amp;t=ZXS82gBbXq-45-aCwmi1cKY7DcTWUwFt36c9wsJI-nQ" loading="lazy" height="48" width="48" alt="Paycom logo"></a></div>
                     <div class="timeline-company"> Paycom, LLC</div>
                     <p>Responsible for documenting, testing, and maintaining the Paycom UI library using HTML, CSS, JavaScript, React, Jest, and React Testing Library.</p>
                     <p>Gained valuable experience in troubleshooting and maintaining the Paycom UI library working closely with module developers to meet pressing iteration deadlines</p>
@@ -46,7 +46,7 @@
                 <div class="timeline-content">
                     <div class="timeline-date">FEBRUARY 2016 - OCTOBER 2022</div>
                     <div class="timeline-role">Front-end Web Developer</div>
-                    <div class="timeline-company-logo"><img src="https://media.licdn.com/dms/image/v2/C560BAQHAHzxUEG-uxg/company-logo_100_100/company-logo_100_100/0/1631383118613?e=1747872000&amp;v=beta&amp;t=7CbPlJQNExqqKjqKtpz3OcDit0O80BGFROAgdPXvraE" loading="lazy" height="48" width="48" alt="SafetySkills logo"></div>
+                    <div class="timeline-company-logo"><a href="https://web.archive.org/web/20200815112309/https://safetyskills.com/" target="_blank"><img src="https://media.licdn.com/dms/image/v2/C560BAQHAHzxUEG-uxg/company-logo_100_100/company-logo_100_100/0/1631383118613?e=1747872000&amp;v=beta&amp;t=7CbPlJQNExqqKjqKtpz3OcDit0O80BGFROAgdPXvraE" loading="lazy" height="48" width="48" alt="SafetySkills logo"></a></div>
                     <div class="timeline-company">SafetySkills, LLC</div>
                     <p>Responsible for maintaining 508-compliant web-based health and safety training courseware (CSS and JavaScript) for the SafetySkills Learning Management System (LMS). Helped with the UX/UI design (used Figma), provided documentation, added automation testing for courseware (used Selenium and Webdriver with C#, and developed the front-end of the SafetySkills LMS redesign (used Angular).</p>
                     <p>Gained valuable experience in maintaining a website, developing courseware using SCORM/AICC, providing automation testing with Selenium and Webdriver using C#, and managing an LMS application while working closely with the customer care department to meet pressing iteration deadlines.</p>
@@ -56,7 +56,7 @@
                 <div class="timeline-content">
                     <div class="timeline-date">AUGUST 2012 - JANUARY 2016</div>
                     <div class="timeline-role">Multimedia Programmer</div>
-                    <div class="timeline-company-logo"><img src="https://media.licdn.com/dms/image/v2/D560BAQEWyUsmOVCDDA/company-logo_100_100/company-logo_100_100/0/1713839917409/c2_technologies_logo?e=1747872000&v=beta&t=bRXCl71IXRRDe2jaw4k9PIphFSEOFgsjVrZGRdGo6cg" loading="lazy" height="48" width="48" alt="SafetySkills logo"></div>
+                    <div class="timeline-company-logo"><a href="https://www.c2ti.com/" target="_blank"><img src="https://media.licdn.com/dms/image/v2/D560BAQEWyUsmOVCDDA/company-logo_100_100/company-logo_100_100/0/1713839917409/c2_technologies_logo?e=1747872000&v=beta&t=bRXCl71IXRRDe2jaw4k9PIphFSEOFgsjVrZGRdGo6cg" loading="lazy" height="48" width="48" alt="SafetySkills logo"></a></div>
                     <div class="timeline-company">C² Technologies</div>
                     <p>Responsible for creating 508-compliant web-based training courses for mostly the public sector. Developed web-based courses using HTML5, CSS3, JavaScript, jQuery, Bootstrap, and responsive web design.</p>
                     <p>Gained valuable experience in creating web-based training courses using HTML5, CSS3, JavaScript, jQuery, Bootstrap, and responsive web design while working closely with the graphics department to meet pressing iteration deadlines.</p>
@@ -66,7 +66,7 @@
                 <div class="timeline-content">
                     <div class="timeline-date">AUGUST 2012 - JANUARY 2016</div>
                     <div class="timeline-role">Automation Software Tester</div>
-                    <div class="timeline-company-logo"><img src="https://images7.bamboohr.com/63216/logos/cropped.jpg?v=40" loading="lazy" height="48" width="48" alt="Advanced Systems Technology, Inc."></div>
+                    <div class="timeline-company-logo"><a href="https://www.astcorp.com/" target="_blank"><img src="https://images7.bamboohr.com/63216/logos/cropped.jpg?v=40" loading="lazy" height="48" width="48" alt="Advanced Systems Technology, Inc."></div>
                     <div class="timeline-company">Advanced Systems Technology, Inc</div>
                     <p>Responsible for writing automated functional and non-functional test cases scripts for a learning management system which tracks students courses and scores. Developed automated scripting using TestComplete (JScript), FogBugz, Kiln, Mercurial/TortoiseHg, and Jing.</p>
                     <p>Gained valuable experience in maintaining automated scripts (using the JScript language) which automated the browser as a test user, and worked closely with the engineering department to meet pressing iteration deadlines.</p>
@@ -81,7 +81,7 @@
             <div class="project-card">
                 <div class="education-image"><img src="assets/images/education-degree.png" loading="lazy" width="100%" height="100%" alt="Bachelor of Science in Multimedia Instructional Design"></div>
                 <div class="project-content">
-                    <p><img src="https://media.licdn.com/dms/image/v2/C560BAQFT_l9N_fpiNQ/company-logo_100_100/company-logo_100_100/0/1630609102194/cameron_university_logo?e=1747872000&amp;v=beta&amp;t=0AoVWjZvnk5nz7EdfZf6fovM-gju2LqrQYDiO9TPx2g" loading="lazy" height="48" width="48" alt="Cameron University logo"></p>
+                    <p><a href="https://www.scrumalliance.org/" target="_blank"><img src="https://media.licdn.com/dms/image/v2/C560BAQFT_l9N_fpiNQ/company-logo_100_100/company-logo_100_100/0/1630609102194/cameron_university_logo?e=1747872000&amp;v=beta&amp;t=0AoVWjZvnk5nz7EdfZf6fovM-gju2LqrQYDiO9TPx2g" loading="lazy" height="48" width="48" alt="Cameron University logo"></a></p>
                     <p>Cameron University</p>
                     <p><em>August 2005 - December 2009</em></p>
                     <h3>Bachelor of Science in Multimedia Instructional Design</h3>
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <div class="education-image"><img src="assets/images/education-cert-scrummaster.png" loading="lazy" width="100%" height="100%" alt="Certified Scrum Master Certificate"></div>
+                <div class="education-image"><a href="https://www.cameron.edu/" target="_blank"><img src="assets/images/education-cert-scrummaster.png" loading="lazy" width="100%" height="100%" alt="Certified Scrum Master Certificate"></a></div>
                 <div class="project-content">
                     <p><img src="https://media.licdn.com/dms/image/v2/D560BAQFdepbfdMhg3g/company-logo_100_100/company-logo_100_100/0/1719256430021/scrum_alliance_logo?e=1747872000&amp;v=beta&amp;t=deYEU7DPq5DuYZ4KRmsHSsZOQxAb1EW3UqTVjYj-hZs" loading="lazy" height="48" width="48" alt="Scrum Alliance Logo"></p>
                     <p>Scrum Alliance</p>
