SITE: Added links in the proper place

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="project-card">
                 <div class="education-image"><img src="assets/images/education-degree.png" loading="lazy" width="100%" height="100%" alt="Bachelor of Science in Multimedia Instructional Design"></div>
                 <div class="project-content">
-                    <p><a href="https://www.scrumalliance.org/" target="_blank"><img src="https://media.licdn.com/dms/image/v2/C560BAQFT_l9N_fpiNQ/company-logo_100_100/company-logo_100_100/0/1630609102194/cameron_university_logo?e=1747872000&amp;v=beta&amp;t=0AoVWjZvnk5nz7EdfZf6fovM-gju2LqrQYDiO9TPx2g" loading="lazy" height="48" width="48" alt="Cameron University logo"></a></p>
+                    <p><a href="https://www.cameron.edu/" target="_blank"><img src="https://media.licdn.com/dms/image/v2/C560BAQFT_l9N_fpiNQ/company-logo_100_100/company-logo_100_100/0/1630609102194/cameron_university_logo?e=1747872000&amp;v=beta&amp;t=0AoVWjZvnk5nz7EdfZf6fovM-gju2LqrQYDiO9TPx2g" loading="lazy" height="48" width="48" alt="Cameron University logo"></a></p>
                     <p>Cameron University</p>
                     <p><em>August 2005 - December 2009</em></p>
                     <h3>Bachelor of Science in Multimedia Instructional Design</h3>
@@ -89,9 +89,9 @@
                 </div>
             </div>
             <div class="project-card">
-                <div class="education-image"><a href="https://www.cameron.edu/" target="_blank"><img src="assets/images/education-cert-scrummaster.png" loading="lazy" width="100%" height="100%" alt="Certified Scrum Master Certificate"></a></div>
+                <div class="education-image"><img src="assets/images/education-cert-scrummaster.png" loading="lazy" width="100%" height="100%" alt="Certified Scrum Master Certificate"></div>
                 <div class="project-content">
-                    <p><img src="https://media.licdn.com/dms/image/v2/D560BAQFdepbfdMhg3g/company-logo_100_100/company-logo_100_100/0/1719256430021/scrum_alliance_logo?e=1747872000&amp;v=beta&amp;t=deYEU7DPq5DuYZ4KRmsHSsZOQxAb1EW3UqTVjYj-hZs" loading="lazy" height="48" width="48" alt="Scrum Alliance Logo"></p>
+                    <p><a href="https://www.scrumalliance.org/" target="_blank"><img src="https://media.licdn.com/dms/image/v2/D560BAQFdepbfdMhg3g/company-logo_100_100/company-logo_100_100/0/1719256430021/scrum_alliance_logo?e=1747872000&amp;v=beta&amp;t=deYEU7DPq5DuYZ4KRmsHSsZOQxAb1EW3UqTVjYj-hZs" loading="lazy" height="48" width="48" alt="Scrum Alliance Logo"></a></p>
                     <p>Scrum Alliance</p>
                     <p><em>January 2011 - January 2013</em></p>
                     <h3>Certified Scrum Master</h3>
