SITE: Closed link tag

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="timeline-content">
                     <div class="timeline-date">AUGUST 2012 - JANUARY 2016</div>
                     <div class="timeline-role">Automation Software Tester</div>
-                    <div class="timeline-company-logo"><a href="https://www.astcorp.com/" target="_blank"><img src="https://images7.bamboohr.com/63216/logos/cropped.jpg?v=40" loading="lazy" height="48" width="48" alt="Advanced Systems Technology, Inc."></div>
+                    <div class="timeline-company-logo"><a href="https://www.astcorp.com/" target="_blank"><img src="https://images7.bamboohr.com/63216/logos/cropped.jpg?v=40" loading="lazy" height="48" width="48" alt="Advanced Systems Technology, Inc."></a></div>
                     <div class="timeline-company">Advanced Systems Technology, Inc</div>
                     <p>Responsible for writing automated functional and non-functional test cases scripts for a learning management system which tracks students courses and scores. Developed automated scripting using TestComplete (JScript), FogBugz, Kiln, Mercurial/TortoiseHg, and Jing.</p>
                     <p>Gained valuable experience in maintaining automated scripts (using the JScript language) which automated the browser as a test user, and worked closely with the engineering department to meet pressing iteration deadlines.</p>
