SITE: Added favicon and logo

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codye Watson - Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo"><a href="#"&lt;Codye Watson&gt;</a></div>
+            <div class="logo"><a href="#"><img id="logo" src="assets/images/logo-white.png" loading="lazy" alt="Logo"></div>
             <div class="nav-links">
                 <a href="#home">Home</a>
                 <a href="#experience">Experience</a>
