--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><a href="#"><img id="logo" src="assets/images/logo-white.png" loading="lazy" alt="Logo"></div>
+            <div class="logo"><a href="#"><img id="logo" loading="lazy" alt="Logo"></div>
             <div class="nav-links">
                 <a href="#home">Home</a>
                 <a href="#experience">Experience</a>
