SITE: Fixed the Contact Google Form

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <input 
                         type="text" 
                         id="name" 
-                        name="name" 
+                        name="entry.1773309892" 
                         required 
                         placeholder="Your name"
                     >
@@ -188,7 +188,7 @@
                     <input 
                         type="email" 
                         id="email" 
-                        name="email" 
+                        name="entry.1500592386" 
                         required 
                         placeholder="Your email"
                     >
@@ -199,7 +199,7 @@
                     <input 
                         type="text" 
                         id="subject" 
-                        name="subject" 
+                        name="entry.1033049435"  
                         required 
                         placeholder="Subject"
                     >
@@ -209,7 +209,7 @@
                     <label for="message">Message</label>
                     <textarea 
                         id="message" 
-                        name="message" 
+                        name="entry.839337160" 
                         required 
                         placeholder="Your message"
                     ></textarea>
