--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is my portfolio showcasing my skills and experience as a front-end software developer. I have experience in HTML, CSS, JavaScript, React, and more. I am passionate about creating user-friendly and visually appealing web applications. Explore my portfolio to learn more about my work and skills.">
     <title>Codye Watson - Portfolio</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -10,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><a href="#"><img id="logo" loading="lazy" alt="Logo"></div>
+            <div class="logo"><a href="#" aria-label="A logo that links to the home page"><img id="logo" loading="lazy" alt="Logo"></div>
             <div class="nav-links">
                 <a href="#home">Home</a>
                 <a href="#experience">Experience</a>
@@ -65,9 +66,9 @@
             </div>
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <div class="timeline-date">AUGUST 2012 - JANUARY 2016</div>
+                    <div class="timeline-date">AUGUST 2010 - OCTOBER 2011</div>
                     <div class="timeline-role">Automation Software Tester</div>
-                    <div class="timeline-company-logo"><a href="https://www.astcorp.com/" target="_blank"><img src="https://images7.bamboohr.com/63216/logos/cropped.jpg?v=40" loading="lazy" height="48" width="48" alt="Advanced Systems Technology, Inc."></a></div>
+                    <div class="timeline-company-logo"><a href="https://www.astcorp.com/" target="_blank"><img src="https://images7.bamboohr.com/63216/logos/cropped.jpg?v=40" loading="lazy" alt="Advanced Systems Technology, Inc."></a></div>
                     <div class="timeline-company">Advanced Systems Technology, Inc</div>
                     <p>Responsible for writing automated functional and non-functional test cases scripts for a learning management system which tracks students courses and scores. Developed automated scripting using TestComplete (JScript), FogBugz, Kiln, Mercurial/TortoiseHg, and Jing.</p>
                     <p>Gained valuable experience in maintaining automated scripts (using the JScript language) which automated the browser as a test user, and worked closely with the engineering department to meet pressing iteration deadlines.</p>
