--- a/index.html
+++ b/index.html
@@ -174,11 +174,15 @@
             
             <form class="contact-form" id="contactForm">
                 <div class="form-group">
+                    <p><br><em>***Currently, the form is disabled. This message will be removed once the form is re-enabled.***</em></p>
+                </div>
+                <div class="form-group">
                     <label for="name">Name</label>
                     <input 
+                        disabled
                         type="text" 
                         id="name" 
-                        name="entry.1773309892" 
+                        name="entry.1045781291" 
                         required 
                         placeholder="Your name"
                     >
@@ -187,9 +191,10 @@
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input 
+                        disabled
                         type="email" 
                         id="email" 
-                        name="entry.1500592386" 
+                        name="entry.1065046570" 
                         required 
                         placeholder="Your email"
                     >
@@ -198,9 +203,10 @@
                 <div class="form-group">
                     <label for="subject">Subject</label>
                     <input 
+                        disabled
                         type="text" 
                         id="subject" 
-                        name="entry.1033049435"  
+                        name="entry.1166974658"  
                         required 
                         placeholder="Subject"
                     >
@@ -209,14 +215,19 @@
                 <div class="form-group">
                     <label for="message">Message</label>
                     <textarea 
+                        disabled
                         id="message" 
-                        name="entry.839337160" 
+                        name="entry.2005620554" 
                         required 
                         placeholder="Your message"
                     ></textarea>
                 </div>
                 
                 <button type="submit" class="submit-button">Send Message</button>
+
+                <div class="form-group">
+                    <p><br><em>***Currently, the form is disabled. This message will be removed once the form is re-enabled.***</em></p>
+                </div>
 
                 <div id="statusMessage" class="status-message" style="display: none;"></div>
             </form>
